Update changes to portfolio

--- a/contact.html
+++ b/contact.html
@@ -136,7 +136,7 @@
             <ul class="list-unstyled">
               <li class="mb-3">
                 <strong class="d-block mb-1">Address</strong>
-                <span>Newton Park, Port Elizabeth, South Africa</span>
+                <span>21 Keyes Avenue, Rosebank, Johannesburg</span>
               </li>
               <li class="mb-3">
                 <strong class="d-block mb-1">Phone</strong>
