--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div id="filters" class="filters">
               <a href="#" data-filter="*" class="active">All</a>
               <a href="#" data-filter=".web">Web Development</a>
-              <a href="#" data-filter=".design">UX/UI Design</a>
+              <!--- <a href="#" data-filter=".design">UX/UI Design</a> -->
             </div>
           </div>
         </div>
@@ -98,7 +98,7 @@
             <a href="work-khanyisa.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Khanyisa: A Culinary Storyteller</h3>
-                <span>Web Development</span>
+                <span>E-commerce Development</span>
               </div>
               <img class="img-fluid" src="img/img_66.png">
             </a>
@@ -109,7 +109,7 @@
                 <h3>Iinkumbuzo Photography</h3>
                 <span>Web Development</span>
               </div>
-              <img class="img-fluid" src="img/img_11.jpg">
+              <img class="img-fluid" src="img/img_11.png">
             </a>
           </div>
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -119,15 +119,6 @@
                 <span>Web Development</span>
               </div>
               <img class="img-fluid" src="img/img_44_1.png">
-            </a>
-          </div>
-          <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-empowering.html" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>Empowering The Nation</h3>
-                <span>Web Development & UX/UI Design</span>
-              </div>
-              <img class="img-fluid" src="img/img_33.png">
             </a>
           </div>
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
