Duplicate portfolio works page so it can be the same for index.html and works.html

--- a/works.html
+++ b/works.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Home - Linda Kenqa</title>
+  <title>Works- Linda Kenqa</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="Linda Kenqa portfolio " name="keywords">
   <meta content="This website is a web development/ux design portfolio for Linda Kenqa" name="description">
@@ -82,24 +82,34 @@
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
             <h2>Hey, I'm Linda</h2>
-            <p class="mb-0">Frontend Developer &amp; User Interface Designer based in Port Elizabeth, South Africa.</p>
+            <p class="mb-0">I'm a User Experience Designer based in Johannesburg, South Africa.
+              I'm a results-driven professional with a versatile skill set and a passion for creating exceptional digital experiences.</p>
           </div>
           <div class="col-md-12 col-lg-6 text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
               <a href="#" data-filter="*" class="active">All</a>
               <a href="#" data-filter=".web">Web Development</a>
-              <a href="#" data-filter=".design">UX/UI Design</a>
+              <!--- <a href="#" data-filter=".design">UX/UI Design</a> -->
             </div>
           </div>
         </div>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
+          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-khanyisa.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Khanyisa: A Culinary Storyteller</h3>
+                <span>E-commerce Development</span>
+              </div>
+              <img class="img-fluid" src="img/img_66.png">
+            </a>
+          </div>
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-iinkumbuzo.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Iinkumbuzo Photography</h3>
                 <span>Web Development</span>
               </div>
-              <img class="img-fluid" src="img/img_11.jpg">
+              <img class="img-fluid" src="img/img_11.png">
             </a>
           </div>
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -108,16 +118,7 @@
                 <h3>Wallet Manager</h3>
                 <span>Web Development</span>
               </div>
-              <img class="img-fluid" src="img/img_44.png">
-            </a>
-          </div>
-          <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-empowering.html" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>Empowering The Nation</h3>
-                <span>Web Development & UX/UI Design</span>
-              </div>
-              <img class="img-fluid" src="img/img_33.png">
+              <img class="img-fluid" src="img/img_44_1.png">
             </a>
           </div>
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
