Remove/add services

--- a/index.html
+++ b/index.html
@@ -159,8 +159,7 @@
             <p>Great business growth by design.</p>
             <ul class="list-unstyled list-line">
               <li>Web Design</li>
-              <li>Web Development</li>
-              <li>Content Management</li>
+              <li>Web & E-commerce Development</li>
               <li>Search Engine Optimization</li>
               <li>Web Hosting</li>
             </ul>
@@ -184,7 +183,7 @@
             <ul class="list-unstyled list-line">
               <li>Brand Identity Design</li>
               <li>Product Packaging Design </li>
-              <li>Digital Advertising</li>
+              <li>Digital Marketing</li>
               <li>Graphic Design</li>
             </ul>
           </div>
