--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               <img class="img-fluid" src="img/img_22.png">
             </a>
           </div>
-          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-bukanindalo.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Bukanindalo NPC</h3>
