Populate and edit work-khnayisa.html

--- a/work-khanyisa.html
+++ b/work-khanyisa.html
@@ -67,7 +67,7 @@
     <div class="container">
       <img class="navbar-brand" src="img/LOGO.png" href="index.html"/>
 
-      <a href="#" class="burger" data-toggle="collapse" data-target="#main-navbar">
+      <a href="" class="burger" data-toggle="collapse" data-target="#main-navbar">
         <span></span>
       </a>
 
@@ -83,9 +83,10 @@
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
 
-            <h2>EC Internet</h2>
-            <p>EC Internet is an internet service provider that provides wired, wireless broadband services and fibre-optic 
-              internet access in South Africa.</p>
+            <h2>Khanyisa - The Culinary Storyteller</h2>
+            <p>This online store displays a beautiful visual encapsulation of
+              author, businesswoman and cook, Khanyisa Malabi.
+            </p>
 
           </div>
 
@@ -97,29 +98,29 @@
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <img src="img/img_22.png" alt="Image" class="img-fluid">
+              <img src="img/img_66.png" alt="Image" class="img-fluid">
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
-                <h3 class="h3">EC Internet</h3>
-                <p class="mb-4"><span class="text-muted">Web Development</span></p>
+                <h3 class="h3">Khanyisa - The Culinary Storyteller</h3>
+                <p class="mb-4"><span class="text-muted">E-commerce Development</span></p>
 
                 <div class="mb-5">
-                  <p>I developed EC Internet's online presence by building a brochure website that features the company
-                    profile, prices for the different internet packages and a contact form for client queries. 
+                  <p>I designed an elegant, beautiful and responsive user interface for Khanyisa. 
+                    The brief was to create a clean yet visually immersive digital experience. 
+                    The website is also equipped with user-friendly e-commerce functionality.
                   </p>
                 </div>
 
 
                 <h4 class="h4 mb-3">What I did</h4>
                 <ul class="list-unstyled list-line mb-5">
-                  <li>Logo Re-Design</li>
-                  <li>HTML5/CSS3 Markup</li>
-                  <li>PHP Contact Form</li>
+                  <li>Design</li>
+                  <li>E-commerce Functionality</li>
+                  <li>E-commerce Store Management</li>
                 </ul>
 
-                <p><a href="http://www.ecinternet.co.za/" class="readmore">Visit Website</a></p>
-                <p><a href="https://github.com/steezyza/ecinternet" class="readmore">View Source Code</a></p>
+                <p><a href="http://www.khanyisamalabi.com/" class="readmore">Visit Website</a></p>
               </div>
             </div>
           </div>
@@ -143,16 +144,16 @@
                   <h3>iinkumbuzo Photography</h3>
                   <span>Web Development</span>
                 </div>
-                <img class="img-fluid" src="img/img_11.jpg">
+                <img class="img-fluid" src="img/img_11.png">
               </a>
             </div>
             <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="work-empowering.html" class="item-wrap fancybox">
                 <div class="work-info">
-                  <h3>Empowering The Nation</h3>
-                  <span>UI/UI Design</span>
+                  <h3>Bukanindalo NPC</h3>
+                  <span>Web Development</span>
                 </div>
-                <img class="img-fluid" src="img/img_33.png">
+                <img class="img-fluid" src="img/img_55.png">
               </a>
             </div>
             <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -161,7 +162,7 @@
                   <h3>Wallet Manager</h3>
                   <span>Web Development</span>
                 </div>
-                <img class="img-fluid" src="img/img_44.png">
+                <img class="img-fluid" src="img/img_44_1.png">
               </a>
             </div>
           </div>
