Comment out portfolio works section in index.html

--- a/index.html
+++ b/index.html
@@ -82,14 +82,16 @@
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
             <h2>Hey, I'm Linda</h2>
-            <p class="mb-0">I'm a User Experience Designer based in Johannesburg, South Africa.
+            <p class="mb-0">I'm a U Designer based in Johannesburg, South Africa.
               I'm a results-driven professional with a versatile skill set and a passion for creating exceptional digital experiences.</p>
           </div>
-          <div class="col-md-12 col-lg-6 text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
+          <!---
+            <div class="col-md-12 col-lg-6 text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
               <a href="#" data-filter="*" class="active">All</a>
               <a href="#" data-filter=".web">Web Development</a>
-              <!--- <a href="#" data-filter=".design">UX/UI Design</a> -->
+              <a href="#" data-filter=".design">UX/UI Design</a> 
+          -->
             </div>
           </div>
         </div>
