Add liquid images for landing page

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
             <h2>Hey, I'm Linda</h2>
-            <p class="mb-0">I'm a U Designer based in Johannesburg, South Africa.
+            <p class="mb-0">I'm a UX/UI Designer based in Johannesburg, South Africa.
               I'm a results-driven professional with a versatile skill set and a passion for creating exceptional digital experiences.</p>
           </div>
           <!---
@@ -262,3 +262,11 @@
 </body>
 
 </html>
+
+<!-- 
+  IMAGE CREDITS (UNSPLASH):
+  1. Photo by Tima Miroshnichenko: https://www.pexels.com/photo/light-man-people-woman-6693275/
+  2. Photo by Tima Miroshnichenko: https://www.pexels.com/photo/light-black-game-competition-6693358/
+
+
+-->
