--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
 
     </div>
   </nav>
-
+  <div class="landing">
+    
+  </div>
   <main id="main">
 
     <div class="site-section site-portfolio">
@@ -85,10 +87,10 @@
             <p class="mb-0">I'm a UX/UI Designer based in Johannesburg, South Africa.
               I'm a results-driven professional with a versatile skill set and a passion for creating exceptional digital experiences.</p>
           </div>
-          <!---
+          
             <div class="col-md-12 col-lg-6 text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
-              <a href="#" data-filter="*" class="active">All</a>
+          <!---    <a href="#" data-filter="*" class="active">All</a>
               <a href="#" data-filter=".web">Web Development</a>
               <a href="#" data-filter=".design">UX/UI Design</a> 
           -->
