Edit project copy and change thumbnail images

--- a/work-iinkumbuzo.html
+++ b/work-iinkumbuzo.html
@@ -96,7 +96,7 @@
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <img src="img/img_11.jpg" alt="Image" class="img-fluid">
+              <img src="img/img_11.png" alt="Image" class="img-fluid">
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
@@ -104,9 +104,9 @@
                 <p class="mb-4"><span class="text-muted">Web Development</span></p>
 
                 <div class="mb-5">
-                  <p>I revamped the old studio's website, and provided a clean and responsive design that was easy 
+                  <p>I revamped the studio's old website portfolio, and provided a clean and responsive design that was easy 
                     to navigate.
-                    The main website features are a filterable gallery for the portfolio and a contact form.
+                    The main website features are a filterable gallery for the portfolio and a contact form for booking enquiries.
                   </p>
                 </div>
 
@@ -116,7 +116,6 @@
                   <li>HTML5/CSS3 Markup</li>
                   <li>Filterable Portfolio Gallery</li>
                   <li>PHP Contact Form</li>
-                  <li>Content Management System</li>
                   <li>Logo</li>
                 </ul>
 
@@ -151,10 +150,10 @@
             <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="work-empowering.html" class="item-wrap fancybox">
                 <div class="work-info">
-                  <h3>Empowering The Nation</h3>
-                  <span>UI/UX Design</span>
+                  <h3>Khanyisa - The Culinary Storyteller</h3>
+                  <span>Web Development</span>
                 </div>
-                <img class="img-fluid" src="img/img_33.png">
+                <img class="img-fluid" src="img/img_66.png">
               </a>
             </div>
             <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -163,7 +162,7 @@
                   <h3>Wallet Manager</h3>
                   <span>Web Development</span>
                 </div>
-                <img class="img-fluid" src="img/img_44.png">
+                <img class="img-fluid" src="img/img_44_1.png">
               </a>
             </div>
           </div>
