--- a/work-walletmanager.html
+++ b/work-walletmanager.html
@@ -96,7 +96,7 @@
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <img src="img/img_44.png" alt="Image" class="img-fluid">
+              <img src="img/img_44_1.png" alt="Image" class="img-fluid">
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
@@ -154,7 +154,7 @@
                   <h3>iinkumbuzo Photography</h3>
                   <span>Web Development</span>
                 </div>
-                <img class="img-fluid" src="img/img_11.jpg">
+                <img class="img-fluid" src="img/img_11.png">
               </a>
             </div>
             <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
