Add thumbnail images in work-ecinternet.html and change Khanyisa page address in work-khanyisa.html

--- a/work-ecinternet.html
+++ b/work-ecinternet.html
@@ -142,16 +142,16 @@
                   <h3>iinkumbuzo Photography</h3>
                   <span>Web Development</span>
                 </div>
-                <img class="img-fluid" src="img/img_11.jpg">
+                <img class="img-fluid" src="img/img_11.png">
               </a>
             </div>
             <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="work-empowering.html" class="item-wrap fancybox">
+              <a href="work-khanyisa.html" class="item-wrap fancybox">
                 <div class="work-info">
-                  <h3>Empowering The Nation</h3>
-                  <span>UI/UI Design</span>
+                  <h3>Khanyisa -  The Culinary Storyteller</h3>
+                  <span>Web Development</span>
                 </div>
-                <img class="img-fluid" src="img/img_33.png">
+                <img class="img-fluid" src="img/img_66.png">
               </a>
             </div>
             <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -160,7 +160,7 @@
                   <h3>Wallet Manager</h3>
                   <span>Web Development</span>
                 </div>
-                <img class="img-fluid" src="img/img_44.png">
+                <img class="img-fluid" src="img/img_44_1.png">
               </a>
             </div>
           </div>
