--- a/work-iinkumbuzo.html
+++ b/work-iinkumbuzo.html
@@ -148,7 +148,7 @@
               </a>
             </div>
             <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="work-empowering.html" class="item-wrap fancybox">
+              <a href="work-khanyisa.html" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>Khanyisa - The Culinary Storyteller</h3>
                   <span>Web Development</span>
