--- a/work-ecinternet.html
+++ b/work-ecinternet.html
@@ -97,7 +97,7 @@
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <img src="img/img_22.png" alt="Image" class="img-fluid">
+              <img src="img/ecinternet.jpg" alt="Image" class="img-fluid">
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
