--- a/work-earthwood.html
+++ b/work-earthwood.html
@@ -122,9 +122,7 @@
                   <li>User Experience Design</li>
                   <li>User Interface Design</li>
                 </ul>
-
-                <p><a href="http://www.bukanindalo.org/" class="readmore">Visit Website</a></p>
-                <p><a href="https://github.com/steezyza/bukanindalo" class="readmore">View Source Code</a></p>
+                <p><a href="https://github.com/steezyza/bukanindalo" class="readmore">View Case Study</a></p>
               </div>
             </div>
           </div>
