Change file path for case study

--- a/work-earthwood.html
+++ b/work-earthwood.html
@@ -122,7 +122,7 @@
                   <li>User Experience Design</li>
                   <li>User Interface Design</li>
                 </ul>
-                <p><a href="https://github.com/steezyza/bukanindalo" class="readmore">View Case Study</a></p>
+                <p><a href="lindakenqa/earthwood.pdf" class="readmore">View Case Study</a></p>
               </div>
             </div>
           </div>
