--- a/index.html
+++ b/index.html
@@ -99,6 +99,15 @@
         </div>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-earthwood.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Earthwood Collective</h3>
+                <span>UX/UI Design</span>
+              </div>
+              <img class="img-fluid" src="img/earthwood.png">
+            </a>
+          </div>
+          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-khanyisa.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Khanyisa: A Culinary Storyteller</h3>
