--- a/works.html
+++ b/works.html
@@ -89,11 +89,20 @@
             <div id="filters" class="filters">
               <a href="#" data-filter="*" class="active">All</a>
               <a href="#" data-filter=".web">Web Development</a>
-              <!--- <a href="#" data-filter=".design">UX/UI Design</a> -->
+              <a href="#" data-filter=".design">UX/UI Design</a>
             </div>
           </div>
         </div>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
+          <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-earthwood.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Earthwood Collective</h3>
+                <span>UX/UI Design</span>
+              </div>
+              <img class="img-fluid" src="img/earthwood.png">
+            </a>
+          </div>
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-khanyisa.html" class="item-wrap fancybox">
               <div class="work-info">
