Add 'See More' card item

--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
             </a>
           </div>
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-walletmanager.html" class="item-wrap fancybox">
+            <a href="work-bukanindalo.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Wallet Manager</h3>
+                <h3>Bukanindalo NPC</h3>
                 <span>Web Development</span>
               </div>
-              <img class="img-fluid" src="img/img_44_1.png">
+              <img class="img-fluid" src="img/img_55.PNG">
             </a>
           </div>
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -143,13 +143,12 @@
               <img class="img-fluid" src="img/img_22.png">
             </a>
           </div>
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-bukanindalo.html" class="item-wrap fancybox">
+          <div class="item col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="works.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Bukanindalo NPC</h3>
-                <span>Web Development</span>
+                <h1 style="font-size:40px">SEE MORE</h1>
               </div>
-              <img class="img-fluid" src="img/img_55.PNG">
+              <img class="img-fluid" src="img/See More.png">
             </a>
           </div>
         </div>
