--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           <div class="item col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="works.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h1 style="font-size:40px">SEE MORE</h1>
+                <img class="img-fluid" src="img/See More2.png">
               </div>
               <img class="img-fluid" src="img/See More.png">
             </a>
