--- a/index.html
+++ b/index.html
@@ -143,12 +143,13 @@
               <img class="img-fluid" src="img/img_22.png">
             </a>
           </div>
-          <div class="item col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="works.html" class="item-wrap fancybox">
+          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-izwi.html" class="item-wrap fancybox">
               <div class="work-info">
-                <img class="img-fluid" src="img/See More2.png">
+                <h3>IZWI: The Voice</h3>
+                <span>UX/UI Design</span>
               </div>
-              <img class="img-fluid" src="img/See More.png">
+              <img class="img-fluid" src="img/IZWI.png">
             </a>
           </div>
         </div>
