Modify IZWI portfolio page

--- a/work-izwi.html
+++ b/work-izwi.html
@@ -83,9 +83,9 @@
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
 
-            <h2>Khanyisa - The Culinary Storyteller</h2>
-            <p>This online store displays a beautiful visual encapsulation of
-              author, businesswoman and cook, Khanyisa Malabi.
+            <h2>IZWI - Our Voice</h2>
+            <p>IZWI is a mobile application for online learning and
+              peer-to-peer networking for students
             </p>
 
           </div>
@@ -98,12 +98,12 @@
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <img src="img/img_66.png" alt="Image" class="img-fluid">
+              <img src="img/IZWI_cs.png" alt="Image" class="img-fluid">
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
-                <h3 class="h3">Khanyisa - The Culinary Storyteller</h3>
-                <p class="mb-4"><span class="text-muted">E-commerce Development</span></p>
+                <h3 class="h3">IZWI - Our Voice</h3>
+                <p class="mb-4"><span class="text-muted">UX/UI Design</span></p>
 
                 <div class="mb-5">
                   <p>I designed an elegant, beautiful and responsive user interface for Khanyisa. 
