Add IZWI thumbnail to portfolio works

--- a/works.html
+++ b/works.html
@@ -148,6 +148,15 @@
               <img class="img-fluid" src="img/img_55.PNG">
             </a>
           </div>
+          <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-izwi.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Bukanindalo NPC</h3>
+                <span>UX/UI Design</span>
+              </div>
+              <img class="img-fluid" src="img/IZWI.png">
+            </a>
+          </div>
         </div>
       </div>
     </div>
