--- a/works.html
+++ b/works.html
@@ -151,7 +151,7 @@
           <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-izwi.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Bukanindalo NPC</h3>
+                <h3>IZWI - Our Voice</h3>
                 <span>UX/UI Design</span>
               </div>
               <img class="img-fluid" src="img/IZWI.png">
