--- a/work-izwi.html
+++ b/work-izwi.html
@@ -106,21 +106,19 @@
                 <p class="mb-4"><span class="text-muted">UX/UI Design</span></p>
 
                 <div class="mb-5">
-                  <p>I designed an elegant, beautiful and responsive user interface for Khanyisa. 
-                    The brief was to create a clean yet visually immersive digital experience. 
-                    The website is also equipped with user-friendly e-commerce functionality.
+                  <p>
                   </p>
                 </div>
 
 
                 <h4 class="h4 mb-3">What I did</h4>
                 <ul class="list-unstyled list-line mb-5">
-                  <li>Design</li>
-                  <li>E-commerce Functionality</li>
-                  <li>E-commerce Store Management</li>
+                  <li>Corporate Identity Design</li>
+                  <li>User Research</li>
+                  <li>Mockup Design</li>
+                  <li>User Interface Design</li>
+                  <li>User Experience Design</li>
                 </ul>
-
-                <p><a href="http://www.khanyisamalabi.com/" class="readmore">Visit Website</a></p>
               </div>
             </div>
           </div>
