Add 'See More' link to index.html and modify CSS

--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
             </a>
           </div>
         </div>
+        <div class="see-more">
+          <a class="see-more-text" href="works.html">See More</a>
+        </div>
       </div>
     </div>
 
